--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "expo": "~44.0.0",
@@ -18,6 +19,7 @@
     "expo-font": "~10.0.4",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
