--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uid": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
