--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/styled-components": "^5.1.22",
     "typescript": "~4.3.5"
   },
